force-app/main/default/objects/ER_Distribution_Point__c/ER_Distribution_Point__c.object-meta.xml
<CustomObject>
    <label>Distribution Point</label>
    <nameField>
        <label>Distribution Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>