force-app/main/default/objects/ER_Distribution_Point__c/fields/AccountIdFlow__c.field-meta.xml
<CustomField>
    <fullName>AccountIdFlow__c</fullName>
    <formula>ER_Delivery_Site__r.ER_Financial_Center__r.ER_Account_Name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountIdFlow</label>
    <type>Text</type>
</CustomField>