force-app/main/default/objects/ER_Distribution_Point__c/fields/ER_Delivery_Site__c.field-meta.xml
<CustomField>
    <fullName>ER_Delivery_Site__c</fullName>
    <label>Delivery Site</label>
    <referenceTo>ER_Delivery_Site__c</referenceTo>
    <relationshipLabel>Distribution Points</relationshipLabel>
    <relationshipName>Distribution_Points</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>