force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Activity_Code__c</fullName>
    <label>Activity Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>