force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Authorization_Reactivation_User__c.field-meta.xml
<CustomField>
    <fullName>IT_Authorization_Reactivation_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorization Reactivation User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distribution_Points1</relationshipName>
    <type>Lookup</type>
</CustomField>