force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Authorization_Reactivation_User_Text__c.field-meta.xml
<CustomField>
    <fullName>IT_Authorization_Reactivation_User_Text__c</fullName>
    <label>Authorization Reactivation User Text</label>
    <length>8</length>
    <type>Text</type>
</CustomField>