force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Authorization_Suspension_User__c.field-meta.xml
<CustomField>
    <fullName>IT_Authorization_Suspension_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorization Suspension User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distribution_Points</relationshipName>
    <type>Lookup</type>
</CustomField>