force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Authorization_Suspension_User_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Authorization_Suspension_User_Code__c</fullName>
    <formula>LastModifiedBy.IT_AC_User_Code__c</formula>
    <label>Authorization Suspension User Code</label>
    <type>Text</type>
</CustomField>