force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Autonumber_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Autonumber_Code__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>IT_Autonumber_Code</label>
    <type>AutoNumber</type>
</CustomField>