force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>IT_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation</label>
    <type>Checkbox</type>
</CustomField>