force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Cancellation_Type__c</fullName>
    <label>Cancellation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Cancellation_Type</valueSetName>
    </valueSet>
</CustomField>