force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Client_Code__c</fullName>
    <label>Financial Center</label>
    <length>6</length>
    <type>Text</type>
</CustomField>