force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Code_and_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Code_and_Name__c</fullName>
    <formula>IT_AC_Activity__c  + &#39; - &#39; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code and Name</label>
    <type>Text</type>
</CustomField>