force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Contact_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_Code__c</fullName>
    <label>Sales Manager</label>
    <length>3</length>
    <type>Text</type>
</CustomField>