force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ER_ContractLineItem__c</referenceTo>
    <relationshipLabel>Distribution Points</relationshipLabel>
    <relationshipName>Distribution_Points</relationshipName>
    <type>Lookup</type>
</CustomField>