force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>IT_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>15</length>
    <type>Text</type>
</CustomField>