force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Cost_Center_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Cost_Center_End_Date__c</fullName>
    <label>Cost Center End Date</label>
    <type>Date</type>
</CustomField>