force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Data_To_Display_4__c.field-meta.xml
<CustomField>
    <fullName>IT_Data_To_Display_4__c</fullName>
    <label>Data To Display 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>