force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Data_to_Display__c.field-meta.xml
<CustomField>
    <fullName>IT_Data_to_Display__c</fullName>
    <label>Data to Display</label>
    <length>30</length>
    <type>Text</type>
</CustomField>