force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Data_Type_To_Display_4__c.field-meta.xml
<CustomField>
    <fullName>IT_Data_Type_To_Display_4__c</fullName>
    <label>Data Type To Display 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Data_Type_To_Display</valueSetName>
    </valueSet>
</CustomField>