force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Data_Type_to_Display_Test__c.field-meta.xml
<CustomField>
    <fullName>IT_Data_Type_to_Display_Test__c</fullName>
    <label>Data Type to Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>02 - EDUCATIONAL ASSIST. SERVICE</fullName>
            </value>
            <value>
                <fullName>03 - NURSING SERVICES CHILDHOOD</fullName>
            </value>
            <value>
                <fullName>04 - SERVICES FOR MEDIATION</fullName>
            </value>
            <value>
                <fullName>00 - STATIONERY SCHOOL SERVICES</fullName>
            </value>
            <value>
                <fullName>00 - TRAINING ORGANIZATIONS</fullName>
            </value>
            <value>
                <fullName>00 - PARITARIA SCHOOL</fullName>
            </value>
            <value>
                <fullName>06 - FEES NURSERY</fullName>
            </value>
            <value>
                <fullName>07 - SERV. SOCIAL AND EMPLOYMENT</fullName>
            </value>
            <value>
                <fullName>08 - INTEGRATED CENTERS DAYTIME</fullName>
            </value>
            <value>
                <fullName>09 - RELIEF-EP INTERVENTIONS</fullName>
            </value>
            <value>
                <fullName>10 - RESIDENTIAL INT.SOLLIEVO</fullName>
            </value>
            <value>
                <fullName>90 - SUPPORT FOR PARENTHOOD</fullName>
            </value>
            <value>
                <fullName>11 - ASA-RELIEF MEASURES</fullName>
            </value>
            <value>
                <fullName>91 - DISCOUNT PREPAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>