force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Delivery_Site_Filtered__c.field-meta.xml
<CustomField>
    <fullName>IT_Delivery_Site_Filtered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Site Filtered</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ER_Delivery_Site__c.ER_Financial_Center__c</field>
            <operation>equals</operation>
            <valueField>$Source.IT_Financial_Center__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ER_Delivery_Site__c</referenceTo>
    <relationshipLabel>Distribution Points (Delivery Site Filtered)</relationshipLabel>
    <relationshipName>Distribution_Points1</relationshipName>
    <type>Lookup</type>
</CustomField>