force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Distribution_Point_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Distribution_Point_Address__c</fullName>
    <formula>IT_Toponym__c &amp; &quot; &quot; &amp; ER_Street__c &amp; BR() &amp; 
ER_City__c &amp; &quot; &quot; &amp; IT_Additional_Locality__c &amp; BR() &amp; 
ER_Zip_Code__c &amp; &quot; &quot; &amp; IT_Province__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>