force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Do_not_send_circular_to_the_activity__c.field-meta.xml
<CustomField>
    <fullName>IT_Do_not_send_circular_to_the_activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not send circular to the activity</label>
    <type>Checkbox</type>
</CustomField>