force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Employees_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Employees_Number__c</fullName>
    <label>Employees Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>