force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Extra_Urban_Specifications__c.field-meta.xml
<CustomField>
    <fullName>IT_Extra_Urban_Specifications__c</fullName>
    <label>Extra-Urban Specifications</label>
    <length>100</length>
    <type>Text</type>
</CustomField>