force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Financial_Center__c.field-meta.xml
<CustomField>
    <fullName>IT_Financial_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Center</label>
    <referenceTo>ER_Financial_Center__c</referenceTo>
    <relationshipLabel>Distribution Points</relationshipLabel>
    <relationshipName>Distribution_Points</relationshipName>
    <type>Lookup</type>
</CustomField>