force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Forcing__c.field-meta.xml
<CustomField>
    <fullName>IT_Forcing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forcing</label>
    <type>Checkbox</type>
</CustomField>