force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Future_Change_Distribution_Point__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_Distribution_Point__c</fullName>
    <label>Future Change Distribution Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>