force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_GeoRef_Loc_Y__c.field-meta.xml
<CustomField>
    <fullName>IT_GeoRef_Loc_Y__c</fullName>
    <label>GeoRef Loc Y</label>
    <length>255</length>
    <type>Text</type>
</CustomField>