force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Locality_to_Display__c.field-meta.xml
<CustomField>
    <fullName>IT_Locality_to_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locality to Display</label>
    <type>Checkbox</type>
</CustomField>