force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_MetRef_Loc_X__c.field-meta.xml
<CustomField>
    <fullName>IT_MetRef_Loc_X__c</fullName>
    <label>MetRef Loc X</label>
    <length>255</length>
    <type>Text</type>
</CustomField>