force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Name_Address_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>IT_Name_Address_Cost_Center__c</fullName>
    <formula>IT_Cost_Center__c + BR()+
Name + &#39; &#39; + &#39;-&#39; + &#39; &#39; +  IT_AC_Activity__c + BR()+
IT_Distribution_Point_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Address Cost Center</label>
    <type>Text</type>
</CustomField>