force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Name_and_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Name_and_Address__c</fullName>
    <formula>Name + &#39; &#39; +  IT_Distribution_Point_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and Address</label>
    <type>Text</type>
</CustomField>