force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Note_Validity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Note_Validity_End_Date__c</fullName>
    <label>Note Validity End Date</label>
    <type>Date</type>
</CustomField>