force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Notes__c.field-meta.xml
<CustomField>
    <fullName>IT_Notes__c</fullName>
    <label>Notes</label>
    <length>40768</length>
    <type>LongTextArea</type>
</CustomField>