force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Raw_Number_for_Display_2__c.field-meta.xml
<CustomField>
    <fullName>IT_Raw_Number_for_Display_2__c</fullName>
    <label>Raw Number for Display 2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>