force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Return_Generic_Ticket__c.field-meta.xml
<CustomField>
    <fullName>IT_Return_Generic_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return generic Ticket</label>
    <type>Checkbox</type>
</CustomField>