force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>IT_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Distribution Points</relationshipLabel>
    <relationshipName>Distribution_Points</relationshipName>
    <type>Lookup</type>
</CustomField>