force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_SF_Activity__c.field-meta.xml
<CustomField>
    <fullName>IT_SF_Activity__c</fullName>
    <label>SF Activity</label>
    <length>6</length>
    <type>Text</type>
</CustomField>