force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Short_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Short_Address__c</fullName>
    <label>Short Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>