force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_State_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_State_Code__c</fullName>
    <label>State Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Province_Code</valueSetName>
    </valueSet>
</CustomField>