force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Street_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Street_Code__c</fullName>
    <label>Street Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>