force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Suspension__c.field-meta.xml
<CustomField>
    <fullName>IT_Suspension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspension</label>
    <type>Checkbox</type>
</CustomField>