force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Suspension_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Suspension_End_Date__c</fullName>
    <label>Suspension End Date</label>
    <type>Date</type>
</CustomField>