force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Suspension_Reason__c.field-meta.xml
<CustomField>
    <fullName>IT_Suspension_Reason__c</fullName>
    <label>Suspension Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>INSOLVENT</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>OCCASIONAL USE</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>SALTUAL ORDERS</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>IRREPERIBLE COMPANY</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>DISCLOSURE</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>ORGANIC DISMISSAL</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>ACTIVITY CLOSED</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>PELLEGRINI COMPETITION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>