force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Technical_Data_Progressive__c.field-meta.xml
<CustomField>
    <fullName>IT_Technical_Data_Progressive__c</fullName>
    <label>Technical Data Progressive</label>
    <length>6</length>
    <type>Text</type>
</CustomField>