force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Ticket_view__c.field-meta.xml
<CustomField>
    <fullName>IT_Ticket_view__c</fullName>
    <formula>TEXT(IT_Financial_Center__r.IT_Service__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket View</label>
    <type>Text</type>
</CustomField>