force-app/main/default/objects/ER_Distribution_Point__c/fields/IT_Title__c.field-meta.xml
<CustomField>
    <fullName>IT_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>