force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT01_Activity_Editing_in_AC.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_Activity_Editing_in_AC</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT (ISNEW()) , 
					IT_AC_Activity__c  == null,
					$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
$Profile.Name != &#39;IT System Integration&#39;,
 ISPICKVAL ( ER_Delivery_Site__r.ER_Financial_Center__r.IT_Client_Status__c  ,&#39;ATTIVO&#39;)
				)</errorConditionFormula>
    <errorMessage>Sincronizzazione Anagrafica Clienti in corso: non è possibile modificare l&#39;Attività!</errorMessage>
</ValidationRule>