force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT02_Exposition_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Exposition_Data</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

OR(

AND(

OR(
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1H&#39;),

ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1Z&#39;)),

OR
(
ISCHANGED(IT_Raw_Number_for_Display__c) &amp;&amp; PRIORVALUE(IT_Raw_Number_for_Display__c) != 0,
ISCHANGED( IT_Address_to_Display__c ) &amp;&amp; PRIORVALUE(IT_Address_to_Display__c ) = true,
ISCHANGED(IT_Naming_to_Display__c ) &amp;&amp; PRIORVALUE(IT_Naming_to_Display__c ) = true,
ISCHANGED( IT_Locality_to_Display__c ) &amp;&amp; PRIORVALUE(IT_Locality_to_Display__c ) = true)),

ISCHANGED( IT_Locality_to_Display__c ) &amp;&amp; PRIORVALUE(IT_Locality_to_Display__c ) = true,

OR(
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;4&#39;),
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;0I&#39;),
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;E&#39;),
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;6&#39;),
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;M&#39;),
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;0N&#39;),
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;0Z&#39;),
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;0R&#39;),
ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;0S&#39;)
)),

$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;))</errorConditionFormula>
    <errorMessage>It&#39;s impossibile to modify these fields</errorMessage>
</ValidationRule>