force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT03_NO_Locality.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT03_NO_Locality</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				OR(
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;4&#39; ),
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;0I&#39; ),
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;E&#39; ),
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;6&#39; ),
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;M&#39; ),
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;0N&#39; ),
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;0Z&#39; ),
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;0R&#39; ),
				ISPICKVAL(IT_Financial_Center__r.IT_Service__c ,&#39;0S&#39; )
),
IT_Locality_to_Display__c =true,
							$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
ISPICKVAL ( ER_Delivery_Site__r.ER_Financial_Center__r.IT_Client_Status__c   ,&#39;02&#39;)
				)</errorConditionFormula>
    <errorMessage>Locality to dispaly on the ticket must not be managed by the Cleanway and Ticket Service customers!</errorMessage>
</ValidationRule>