force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT04_Free_Description_to_Display.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT04_Free_Description_to_Display</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(
IT_Raw_Number_for_Display__c != 0,
IT_Address_to_Display__c = true
),
				 IT_Free_Description_to_Display__c =true,
$User.ER_BypassVR__c = False,

ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
ISPICKVAL ( ER_Delivery_Site__r.ER_Financial_Center__r.IT_Client_Status__c   ,&#39;02&#39;)
				)</errorConditionFormula>
    <errorMessage>This field cannot be changed if is set Raw Number of Display or Address to Display</errorMessage>
</ValidationRule>