force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT06_Status_Based_Change_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT06_Status_Based_Change_Block</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
$Profile.Name != &#39;IT System Integration&#39;,

OR(
ISPICKVAL( IT_Financial_Center__r.IT_Client_Status__c , &#39;10&#39;),
ISPICKVAL( IT_Financial_Center__r.IT_Client_Status__c , &#39;00&#39;),
ISPICKVAL(IT_Financial_Center__r.IT_Client_Status__c , &#39;03&#39;)
)
)</errorConditionFormula>
    <errorMessage>Impossible to modify fields for this client status!</errorMessage>
</ValidationRule>