force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT07_Single_Activity.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT07_Single_Activity</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

 IT_Financial_Center__r.IT_Single_Client_Multiactivity__c = false,

OR(
ISCHANGED( IT_Naming_to_Display__c ),
ISCHANGED( IT_Address_to_Display__c ),
ISCHANGED( IT_Locality_to_Display__c ),
ISCHANGED( IT_Data_to_Display__c ),
ISCHANGED( IT_Data_Type_to_Display__c ),
ISCHANGED( IT_Free_Description_to_Display__c ),
ISCHANGED( IT_Raw_Number_for_Display__c ),
ISCHANGED( IT_Cancellation__c ),
ISCHANGED( IT_Suspension__c ),
ISCHANGED( IT_Cancellation_Type__c ),
ISCHANGED( IT_Suspension_Start_Date__c),
ISCHANGED( IT_Suspension_End_Date__c )
))</errorConditionFormula>
    <errorMessage>Impossible to modify Technical Data for single activity client!</errorMessage>
</ValidationRule>