force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT08_Active_Client_Suspension_Reactiv.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT08_Active_Client_Suspension_Reactiv</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

ISCHANGED ( IT_Suspension__c ),

OR(
 IT_Future_Change_Address__c != null,
 IT_Future_Change_Distribution_Point__c != null,

NOT(ISPICKVAL ( ER_Delivery_Site__r.ER_Financial_Center__r.IT_Client_Status__c ,&#39;02&#39;))
))</errorConditionFormula>
    <errorMessage>Client is inactive or there are future variations! You cannot suspend/reactivate the activity!</errorMessage>
</ValidationRule>