force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT10_Activity_Not_Suspended.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT10_Activity_Not_Suspended</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

 IT_Suspension__c = false,

OR(
ISCHANGED( IT_Suspension_End_Date__c ),
ISCHANGED( IT_Authorization_Reactivation_User__c )

)
)</errorConditionFormula>
    <errorMessage>The activity is not suspended! Impossible to reactivate it!</errorMessage>
</ValidationRule>