force-app/main/default/objects/ER_Distribution_Point__c/validationRules/VRIT11_Close_Cost_Center.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT11_Close_Cost_Center</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
$Profile.Name != &#39;IT System Integration&#39;,   
ISCHANGED( IT_Cost_Center_End_Date__c ),

OR(
NOT(ISPICKVAL( IT_Financial_Center__r.IT_Client_Status__c ,&#39;02&#39;)),

IT_Financial_Center__r.IT_Single_Client_Multiactivity__c =false,

 IT_Cost_Center__c = null

))</errorConditionFormula>
    <errorMessage>cost center end date cannot be changed for this type of customer status</errorMessage>
</ValidationRule>